--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,9 @@
+#
+# Copyright (c) 2019-2020, University of Southampton and Contributors.
+# All rights reserved.
+#
+# SPDX-License-Identifier: LGPL-3.0-or-later
+#
 
 file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${GdbServer_SOURCE_DIR}/include/gdb-server/*.hpp")
 
@@ -10,7 +16,8 @@ add_library(
     ${HEADER_LIST}
     )
 
-target_include_directories(gdb-server PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${GdbServer_SOURCE_DIR}/include>)
+target_include_directories(gdb-server
+  PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${GdbServer_SOURCE_DIR}/include>)
 
 target_link_libraries(
   gdb-server
